--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -11,7 +11,100 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 
 article, aside, dialog, figure, footer, #header, hgroup, nav, section { display: block; }
 
-body { line-height: 1.5; }
+body { 
+  line-height: 1.5;
+}
+
+header {
+  padding: 0 20px;
+  border-bottom: #e6e6e6 solid 2px;
+  margin-bottom:  40px;
+  margin-top: 0px;
+  vertical-align: left;
+  position: relative;
+  display: block;
+  height: 80px;
+  width: 100%;
+}
+
+nav {
+  text-align: right;
+  float: right;
+}
+
+nav select {
+  display: none;
+  float: left;
+  margin-top: 50px;
+  margin-left: 0px;
+  font-size: 1.2em;
+}
+
+nav ul {
+  padding-left: 0;
+  padding-top:40px;
+}
+
+#logo {
+  width: 200px;
+}
+
+div.wrapper {
+  padding-left: 20px;
+  float: left;
+  width: 100%;
+}
+
+nav li {
+  display:inline-block;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav a {
+  color: #000;
+  text-decoration: none;
+  padding: 5px 8px 0 10px;
+  font-size: 1.2em;
+}
+
+nav a.active {
+  font-weight: bold;
+  color: #4D4D4D;
+  border-bottom: solid;
+  border-color: white;
+  border-width: 10px;
+  border-top: 2px solid #e6e6e6;
+  border-radius: 10px 10px 0 0;
+}
+
+nav a:hover {
+  color:#56a0ab;
+}
+/*navigation for the blind, blend this into the background*/
+
+nav li.dead_link:hover{
+ color: #AAAAAA;
+}
+
+.First, .Second {
+  float: left;
+  min-width: 280px;
+  max-width: 470px;
+  margin-bottom: 10px;
+  height: 100%;
+}
+
+.First {
+  margin-right: 60px;
+}
+
+section article header {
+  padding-left: 0;
+  border-bottom: none;
+}
 
 table.news {
   width: 100%;
@@ -58,8 +151,9 @@ table.event {
 }
 
 table.featured {
-  width: 450px;
+  min-width: 450px;
   margin: 20px 15px;
+  max-width: 100%;
 }
 
 table.featured td {
@@ -106,16 +200,17 @@ article.spotlight h1 {
 article.spotlight .date {
   color: #333333;
   font-weight: bold;
-
 }
 
 article.spotlight {
     padding: 10px 0 0 15px;
     margin-bottom: 65px;
 }
+
 p.spotlight {
   margin: 10px 0 10px 0px;
 }
+
 html,body{
   font-family:myriad, sans-serif;
   font-size: 14px;
@@ -127,23 +222,22 @@ html,body{
 
 #video_1 img {
   margin: 45px 0 20px 0;
-  width: 480px;  
+  width: 100%;  
 }
 
 #video {
   padding-left: 50px;
 }
 
-#header {
-  margin-left: 20px;
-  border-bottom: #e6e6e6 solid 2px;
-  margin-bottom:  60px;
-  margin-top: 0px;
-  vertical-align: left;
-  position: relative;
-  height: 78px;
+.dl {
+  max-width: 114px;
+  height: 122px;
 }
 
+.ss {
+  max-width: 244px;
+  height: 212px;
+}
 #logo {
   float: left;
   margin-top:  0;
@@ -161,28 +255,11 @@ div.cert:hover {
   width: 100px;
 }
 
-#nav {
-  text-align: right;
-  position: relative;
-  right: 40px;
-}
-
-#nav ul {
-  width: 100%;
-}
-
-#header li {
-  display:inline-block;
-  zoom: 1;
-  *display: inline;
-}
-
 .faq_title {
   padding-left:  25px;
 }
 
-.FAQ h2, div#RightDiv h2 {
-  background: url(../images/blue_dot.png) 0 30% no-repeat;
+.FAQ h2, .Second h2 {
   text-decoration: none;
 }
 
@@ -197,35 +274,14 @@ ul.FAQ p {
   font-size: 100%;
 }
 
-.questionAnswer {
-  padding-top:5px;
-  padding-bottom:5px;
-}
-
-.firstQuestion {
-  border-top:0px
-  margin-left: 25px;
-}
-
-.questionAnswer p{
-  margin-top:0px;
-  margin-left: 25px;
-  margin-bottom: 20px;
-}
-
-.question {
-  font-weight: bold;
-  color: #81B33C;
-  font-size: 1.2em;
-  padding-top:10px;
-  padding-bottom:5px;
-  padding-left:  25px;
-}
-
 h1 {
   color: #4d4d4d;
   font-size: 1.8em;
   margin-bottom: 20px;
+}
+
+article h1 {
+  margin-bottom: 0;
 }
 
 h2 {
@@ -233,7 +289,7 @@ h2 {
   color: black;
 }
 
-#RightDiv h3{
+.Second h3{
   font-size: 1.2em;
   color:  white;
   font-weight: bold;
@@ -243,6 +299,7 @@ h4 {
   color:  #669933;
   font: bold;
   font-size: 1.5em;
+  padding: 10px 0;
 }
 
 a {
@@ -254,35 +311,48 @@ a:hover {
   color: #668F96;
 }
 
-#header a {
-  color: #000;
-  text-decoration: none;
-  padding: 5px 8px 0 10px;
-  font-size: 1.2em;
+img {
+    border-style: none
 }
 
-#header a.selected {
-  font-weight: bold;
-  color: #4D4D4D;
-  border-bottom: solid;
-  border-color: white;
-  border-width: 10px;
-  border-top: 2px solid #e6e6e6;
-  border-radius: 10px 10px 0 0;
+figure {  
+  float: left;
+  width: 470px;
+  margin-bottom: 20px;
+  height: 100%;
+  padding: 20px 0 0 0;
+
 }
 
-#header ul {
-  list-style-type: none;
-  padding-top: 50px;
+figure img {
+  max-width: 380px;
+  max-height: 273px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 4px #4d4d4d;
+  webkit-box-shadow: 0 0 4px #4d4d4d;
+  moz-box-shadow: 0 0 4px #4d4d4d;
+  ms-box-shadow: 0 0 4px #4d4d4d;
 }
 
-article {
-  text-decoration: none;
-  padding: 0 15px;  
+figcaption {
+  width: 380px;
+}
+
+.secondColumn {
+  margin-right: 60px;
+}
+
+section.border { 
 }
 
 article.main {
   padding: 0;
+}
+
+article.feature {
+  text-decoration: none;
+  padding: 0 15px; 
+  margin-bottom: 12px; 
 }
 
 article.feature p{
@@ -301,19 +371,11 @@ article li {
   margin: 0 0;
 }
 
-figure {
-  padding: 20px 0 0 0;
+
+#devsection img.bottom {
+  margin-top: 11px;
 }
 
-#header a:hover {
-  color:#56a0ab;
-}
-
-/*navigation for the blind, blend this into the background*/
-
-#header li.dead_link:hover{
- color: #AAAAAA;
-}
 
 /**content**/
 
@@ -325,17 +387,9 @@ figure {
   margin: 0 20px 0 0;
 }
 
-#LeftDiv {
-  float: left;
-  width: 480px;
-  margin-left:  0px;
-  margin-left: 20px;
-  height: 680px;
-  border-bottom: 1px solid #ccc;
-}
 
 .borders {
-  width: 480px;
+  width: 100%;
   height: 25px;
 }
 
@@ -358,13 +412,6 @@ figure {
   font:  #800000;
 }
 
-#RightDiv {
-  margin-left: 540px;
-  width: 480px;
-  border-bottom: 1px solid #ccc;
-  height: 680px;
-}
-
 #sidebar_1 h3{
   font-style: bold;
 }
@@ -384,7 +431,6 @@ figure {
   background:  -webkit-gradient(linear, left top, left bottom, 
         from(#79AEB8), to(#56A0AA));
   padding:  0 5px 5px 10px;
-  width: 459px;
   height: 20px;
   border-radius: 10px 10px 0 0;
   -moz-border-radius: 10px 10px 0 0; 
@@ -406,8 +452,8 @@ figure {
   background:  -webkit-gradient(linear, left top, left bottom, 
         from(#B0CB86), to(#81B33C));
   font-size:  1.1em;
-  padding:  0 5px 5px 10px;
-  width:  459px;
+  padding:  0 0 5px 10px;
+  max-width:  100%;
   margin-top:  20px;
     height:  20px;
   border-radius: 10px 10px 0 0;
@@ -451,36 +497,63 @@ img.announce {
   margin-left: 70px;
 }
 
-img {
-    border-style: none
-}
-
-#screenshot {
-  margin: 35px 0 0 35px;
-  padding: 40px;
-}
-
-table#screenshot td img{
-  width: 400px;
-}
-table#screenshot td {
-  margin-bottom: 50px;
-}
-
-table td {
-  min-width: 50px;
-  margin-bottom: 40px;
-}
-
 #SourceForgeLogo{
   width:88px;
   height:31px;
 }
 
+article.feature {
+  border-radius: 10px;
+  background-color: white;
+  padding: 10px 15px;
+  margin: -10px 0;
+}
+
+article.bordered {
+  border-radius: 10px;
+  background-color: white;
+  padding: 10px 15px;
+}
+
+section#faq_articles article {
+  margin-bottom: 10px;
+}
+.top_border {
+  background-image: images/top_border.png;
+  background-color: #CCC;
+  padding:  0 5px 5px 10px;
+  height: 20px;
+  border-radius: 10px 10px 0 0;
+  -moz-border-radius: 10px 10px 0 0; 
+  -webkit-border-radius: 10px 10px 0 0;
+  font-style: bold;
+  margin-bottom: -10px;
+}
+
+.bottom {
+  border-radius: 0 0  10px 10px;
+  -moz-border-radius: 0 0 10px 10px; 
+  -webkit-border-radius: 0 0 10px 10px;
+  background-color: white;
+  margin-top: -25px;
+  margin-bottom: 25px;
+  height: 10px;
+}
+
+.bottom_border {
+  background-image: images/top_border.png;
+  background-color: #CCC;
+  padding:  0 5px 5px 10px;
+  height: 20px;
+  border-radius: 0 0 10px 10px;
+  -moz-border-radius: 0 0 10px 10px; 
+  -webkit-border-radius: 0 0 10px 10px;
+}
+
 article.feature ul{
   font-size: 1em;
   font-weight: regular;
-  text-decoration: none
+  text-decoration: none;
 }
 
 article.FAQ p {
@@ -505,9 +578,14 @@ article.FAQ p {
   text-decoration: underline;
 }
 
-#faqHeader {
-  padding-left:  50px;
+.faqHeader {
+  padding-left:  15px;
+  text-decoration: none;  
 }
+.faqHeader li {
+  text-decoration: none; 
+}
+
 
 .feature{
   text-align: left;
@@ -518,9 +596,7 @@ article.FAQ p {
   color:gray;
 }
 
-ul.FAQ {
-  border: 1px solid white;
-  margin-left:  60px
+article ul {
   margin-top: 10px;
   text-decoration: none;
 }
@@ -689,40 +765,29 @@ article.main section {
   margin: 20px 0;
 }
 
-.main{
-  margin-left: 20px;
-}
-
-table#screenshot{
-  width: 1000px;
-  height: 700px;
-}
-
-table#screenshot img {
-  width: 300px;
-  height: 250px;
-  box-shadow: 0 0 4px #4d4d4d;
-  margin-top: 40px;
-}
-
 table td p {
   font-weight: normal;
   font-size: 1em;
   color: black;
 }
 
-#devsection, #pilsection, #selsection, #prosec {
+section h1 {
+  color:  #669933;
+  font: bold;
+  font-size: 1.5em;
+  margin-left: 15px;
 }
-
-h3 {
-  font-size: 1em;
+article h2 {
+  font-size: 1.0em;
+  font-weight: bold;
   color: black;
-  font-weight: normal;
-
+}
+article h1 {
+  margin-left: 0;
 }
 
-div#parti {
-  width: 480px;
+#parti {
+  width: 100%;
   float: left;
   margin-left: 20px;
 }
@@ -734,22 +799,11 @@ div#parti {
   border-bottom: 1px solid #ccc;
 }
 
-div#nextparti h3, div#parti h3 {
-  background: url(../images/liOpen.png) no-repeat scroll 0 35% transparent;
-  margin-left: 30px;
-  cursor: pointer;
-  padding: 10px 15px;
-  font-weight:bold;
-}
 
-div#nextparti h3.on, div#parti h3.on {
-  background: url(../images/liClosed.png) no-repeat scroll 0 35% transparent;
-}
-
-div#nextparti{
+#nextparti{
   margin-left: 200px; 
   margin-left: 540px;
-  width: 480px;
+  width: 100%;
 }
 
 #nextparti h2 {
@@ -760,11 +814,7 @@ div#nextparti{
 }
 
 #devsection, #prosection {
-  margin-bottom: 30px;
-}
-
-#pilsection, #prosec {
-  height: 200px;
+  margin-bottom: 10px;
 }
 
 #nextparti p, #parti p {
@@ -796,4 +846,386 @@ li.spotlight span:before{
 
 img#gm_logo {
   margin-left: 20px;
+}
+
+@media (max-width: 960px) {
+  nav ul      {display: none;}
+  nav select  {display: inline-block;}
+  header      {height: 20%;}
+  .wrapper    {width: 100%;}
+
+  nav select {
+    float: right;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+    width: 290px;
+  }
+  figcaption {
+    display: block;
+  }
+  header {
+    width: 100%;
+    height: 100px;
+  }
+  nav {
+    margin-top: 60px;
+  }
+  iframe {
+    width: 100%;
+  }
+}
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+  body        { width: 320px;}
+  header      {max-width: 460px;}
+  .wrapper    {max-width: 460px;}
+  footer      {max-width: 460px;}
+  
+}
+
+@media only screen
+and (max-width : 320px) {
+  html, body  { width: 320px;}
+  header, .wrapper, footer {
+    max-width: 100%;
+  }
+  header {
+    height: 145px;
+  }
+
+  .wrapper {
+    margin: 0;
+    padding:0;
+  }
+
+  #logo {
+    zoom: 1.5;
+    width: 100%;
+    margin: 0;
+  }
+
+  nav {
+    margin: 0;
+    width:100%;
+  }
+
+  nav select {
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+    width: 100%;
+  }
+  section {
+    max-width: 100%;
+    margin-right:0;
+    margin-bottom: 10px;
+  }
+
+  article {
+    padding: 10px 10px;
+    max-width: 100%;
+  }
+  article.feature p{
+    margin: 0;
+    padding: 5px 0;
+  }
+
+  .Second, .First {
+    float: none;
+    width: 100%
+  } 
+
+  .First    {
+    margin-right:0;
+  }
+
+  .Second h3{
+    font-size: 1em;
+    color:  white;
+    font-weight: bold;
+    width: 100%;
+  }
+
+  #sidebar_2 {
+    max-width: 100%;
+  }
+  article h4 {
+    padding: 0;
+  }
+  article img.dl {
+    float:left;
+    padding-right: 15px;
+    padding-top: 5px;
+  }
+
+  p { 
+    margin-bottom: 5px;
+    max-width:300px;
+  }
+
+  h1.heading {
+    display: none;
+  }
+
+  h2 { 
+    font-size: 1.1em;
+    margin-left: 15px;
+  }
+
+  .bordered h2 {
+    margin-left: 0;
+  }
+
+  td h2 {
+    margin-left: 0;
+    font-size: 1.2em;
+  }
+
+  th {
+    margin-left: 15px;
+  }
+
+  figure {  
+    float: none;
+    max-width: 100%;
+    padding: 10px 10px 0 10px;
+  }
+
+  figure img, img  {
+    max-width: 280px;
+  }
+
+  figcaption {
+    max-width: 280px;
+  }
+
+  .top {
+    border-top: 10px solid white;
+    border-radius: 10px 10px 0 0;
+    -moz-border-radius: 10px 10px 0 0; 
+    -webkit-border-radius: 10px 10px 0 0;
+    height: 5px;
+    background-color:white;
+    max-width: 100%;
+  }
+
+  .top_border_full {
+    background-color: #CCC;
+    padding:  0 5px 5px 10px;
+    height: 20px;
+    border-radius: 10px 10px 0 0;
+    -moz-border-radius: 10px 10px 0 0; 
+    -webkit-border-radius: 10px 10px 0 0;
+    font-style: bold;
+    margin-bottom: -10px;
+    max-width: 100%;
+  }
+
+  .bottom_border_full {
+    background-color: #CCC;
+    padding:  0 5px 5px 10px;
+    height: 20px;
+    border-radius: 0 0 10px 10px;
+    -moz-border-radius: 0 0 10px 10px; 
+    -webkit-border-radius: 0 0 10px 10px;
+    max-width: 100%;
+  }
+
+  .bottom_border {
+    background-color: #CCC;
+    max-width: 100%;
+  }
+
+  .bottom {
+    background-color: white;
+    margin-top: -26px;
+    margin-bottom: 25px;
+    max-width: 100%;
+  }
+
+  h4 {
+    font-size: 1.2em;
+    margin-top: -10px;
+    padding-right:0;
+  }
+
+  #video_1 img, iframe{
+    max-width: 100%;
+    margin: 10px 0;
+  }
+
+  iframe {
+    height: 180px;
+  }
+
+
+  #faq_topics {
+    zoom: 1.2;
+  }
+
+  #footerLinks {
+    float: left;
+    padding-left: 10px;
+    width: 205px;
+  } 
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+/* Styles */
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+/* Styles */
+  body        {
+    min-width: 768px; 
+    margin: 0;
+  }
+
+  header      {
+    width: 100%;
+  }
+
+  .wrapper    {
+    width: 100%;
+  }
+
+  footer      {
+    width: 100%;
+  }
+
+  #logo {
+    zoom: 1.3;
+    width: 50%;
+    margin: 0;
+    float: left;
+  }
+  header {
+    height: 100px;
+    margin-bottom: 50px;
+    width: 100%;
+  }
+  #video_1 img{
+    padding:15px;
+    margin: 0;
+    width: 95%;
+  }
+  nav select {
+    float: right;
+    font-size: 1.2em;
+    width: 300px;
+    margin-top: 0;
+  }
+  #sidebar_1, #sidebar_2 {
+    margin-top: 0px;
+  }
+}
+
+
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+/* Styles */
+
+  .Second, .First {
+    min-width: 280px;
+    height: 100%;
+    zoom: 1.05;
+  }
+  .Second   {
+    float: right;
+  }
+  .First    {
+    float: left;
+    margin-right: 30px;
+    float: left;
+  }
+  nav {
+    float: right;
+  }
+}
+
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+  html, body  { width: 320px;}
+  header, .wrapper, footer {
+    max-width: 768px;
+  }
+  .wrapper    {
+    max-width: 768px; 
+    margin-right:0;
+  }
+  .First, .Second {
+    float: left;
+    max-width: 768px;
+    margin-bottom: 20px;
+    height: 100%;
+  }
+  .First    {
+    float: none;width: 768px; 
+  }
+  .Second   {
+    float: none;width: 100%; margin-left: 0;
+  }
+  .featured, h2 {
+    width: 768px;
+  }
+  figure img {
+    zoom: 2;
+  }
+
+
+  table.news {
+    max-width: 768px; 
+  }
+
+  table.news td, table.news h2 {
+    max-width: 690px;
+  }
+}
+
+/* Desktops and laptops ----------- */
+@media only screen
+and (min-width : 1224px) {
+/* Styles */
+}
+
+/* Large screens ----------- */
+@media only screen
+and (min-width : 1824px) {
+/* Styles */
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
 }
